--- a/module1-solution/index.html
+++ b/module1-solution/index.html
@@ -6,23 +6,24 @@
     <style>
       .message { font-size: 1.3em; font-weight: bold; }
     </style>
+    <link rel="stylesheet" type="text/css" href="app.css">
     <script src="angular.min.js"></script>
     <script src="app.js"></script>
   </head>
 <body>
    <div class="container" ng-controller="LunchCheckController">
      <h1>Lunch Checker</h1>
-
+Do not consider and empty item, i.e., ',,' as an item towards to the count. <br/>
          <div class="form-group">
              <input id="lunch-menu" type="text"
              placeholder="list comma separated dishes you usually have for lunch"
-             class="form-control" ng-model="lunchMenu">
+             class="form-control {{responseColor}}" ng-model="lunchMenu">
          </div>
          <div class="form-group">
              <button class="btn btn-default" ng-click ="checkIfTooMuch()">Check If Too Much</button>
          </div>
-         <div class="form-group message">
-          <span ng-style="style"> {{response}} </span>
+         <div class="form-group message {{responseColor}}">
+           {{response}}
          </div>
    </div>
 </body>
